--- a/source/app/components/feed/feed.html
+++ b/source/app/components/feed/feed.html
@@ -1,6 +1,7 @@
 <div class="card border-0 bg-light">
 
-	<div class="card-header p-2">
+	<div class="card-header d-flex align-items-center p-2">
+		<img class="c-feed-img-profile card-img rounded-circle mr-3" src="https://avatars0.githubusercontent.com/u/2951464?s=460&v=4">
 		Felipe Mengatto
 	</div> <!--  .card-header -->
 	
@@ -10,9 +11,12 @@
 		<p class="card-text m-0">Mamilos São Molengas</p>
 	</div> <!-- .card-body -->
 
-	<div class="card-footer">
-		<i class="fa fa-heart-o" aria-hidden="true"></i>
-		<!-- <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p> -->
+	<div class="card-footer d-flex justify-content-between">
+		<div class="card-buttons">
+			<i class="fa fa-heart-o mr-2" aria-hidden="true"></i>
+			100
+		</div> <!--  .card-button -->
+		<p class="card-text"><small class="text-muted">Last updated 3 mins ago</small>
 	</div> <!--  .card-footer -->
 
 </div> <!-- .card -->
