--- a/source/app/components/login/login.html
+++ b/source/app/components/login/login.html
@@ -11,7 +11,7 @@
 
 			    <input-text 
 			    	label="Usuário" 
-			    	required-warning="Digite seu username" 
+			    	required-warning="Digite seu usuário" 
 			    	ng-model="$ctrl.user.name"
 			    	>
 			    </input-text>
