--- a/source/app/components/menu/menu.html
+++ b/source/app/components/menu/menu.html
@@ -22,7 +22,7 @@
 		</a>
 	</li>
 	<li class="nav-item active ml-3">
-		<a class="nav-link" href="#">
+		<a class="nav-link" ui-sref="home.config">
 			<i class="fa fa-lg fa-cog" aria-hidden="true"></i>
 		</a>
 	</li>
