Add new features

--- a/source/app/components/user/user-personal-data/user-personal-data.html
+++ b/source/app/components/user/user-personal-data/user-personal-data.html
@@ -1,5 +1,9 @@
-<user-form-component 
-	title="Atualizar Seus Dados :)"
-	submit-function="$ctrl.updateUserData();">
-	
-</user-form-component>
+<div class="c-user-personal-data">
+
+	<user-form-component 
+		title="Atualizar Seus Dados :)"
+		submit-function="$ctrl.updateUserData();"
+		button-value="Salvar">
+	</user-form-component>
+
+</div> <!-- .c-user-personal-data -->
