Component to Module

--- a/source/app/components/login/login.html
+++ b/source/app/components/login/login.html
@@ -1,16 +1,16 @@
 <div class="c-login d-flex justify-content-center align-items-center">
 	
-	<div class="card">
+	<div class="card c-login-box">
 
 		<div class="card-header">
-			Duckgram
+			Entrar no Duckgram
 		</div> <!--  .card-header -->
 		
 		<div class="card-body">
 			<form name="login" ng-submit="$ctrl.login();" novalidate>
 
 			    <input-text 
-			    	label="Usuário" 
+			    	label="Seu Usuário" 
 			    	required-warning="Digite seu usuário" 
 			    	ng-model="$ctrl.user.name"
 			    	>
