--- a/source/app/components/user/user-create/user-create.html
+++ b/source/app/components/user/user-create/user-create.html
@@ -3,7 +3,7 @@
 	<div class="c-user-create-box">
 
 		<user-form-component 
-			title="Crie Agora Seu Usuário"
+			title="Crie Agora Sua Conta"
 			submit-function="$ctrl.updateUserData();"
 			button-value="Criar">
 		</user-form-component>
