Add new features

--- a/source/app/shared/components/user/user-form/user-form.html
+++ b/source/app/shared/components/user/user-form/user-form.html
@@ -3,6 +3,7 @@
 	<div class="card  w-100">
 
 		<div class="card-header">
+			<i class="fa fa-user pr-2" aria-hidden="true"></i>
 			{{$ctrl.title}}
 		</div> <!-- .card-header -->
 		
