--- a/source/app/components/login/login.html
+++ b/source/app/components/login/login.html
@@ -12,8 +12,7 @@
 			    <input-text 
 			    	label="Seu Usuário" 
 			    	required-warning="Digite seu usuário" 
-			    	ng-model="$ctrl.user.name"
-			    	>
+			    	ng-model="$ctrl.user.name">
 			    </input-text>
 
 			    <input-password 
