--- a/source/app/components/menu/menu.html
+++ b/source/app/components/menu/menu.html
@@ -12,7 +12,7 @@
 	</li>
 
 	<li class="nav-item active ml-3">
-		<a class="nav-link" href="#">
+		<a class="nav-link" ui-sref="home.post">
 			<i class="fa fa-lg fa-plus-circle" aria-hidden="true"></i>
 		</a>
 	</li>
