--- a/source/app/components/user/user-create/user-create.css
+++ b/source/app/components/user/user-create/user-create.css
@@ -1,12 +1,17 @@
 .c-user-create {
-	width: 100vw;
-	height: 100vh;
 	background: url(/app/assets/images/57c533c850025e10be0c68.jpg) no-repeat center center;
 	background-size: cover;
+	height: 100vh;
+	width: 100vw;
 }
 
 .c-user-create-box {
-	width: 350px;
 	box-shadow: 0px 1px 1px #333;
 	border-radius: 5px;
+}
+
+@media (min-width: 768px) {
+	.c-user-create-box {
+		width: 350px;
+	}
 }
