--- a/source/app/components/slidebar/slidebar.html
+++ b/source/app/components/slidebar/slidebar.html
@@ -1,7 +1,28 @@
 <div class="c-sidebar bg-white">
 	
 	<div class="c-sidebar-fixed">
-		<menu-component></menu-component>
+
+		<div class="card">
+
+			<div class="card-body p-0">
+				<menu-component></menu-component>
+			</div> <!--  .card-body -->
+			
+		</div> <!--  .card -->
+		
+		<div class="c-slidebar-notification card mt-2">
+
+			<div class="card-header d-flex align-items-center">
+				<i class="fa fa-bell-o mr-2" aria-hidden="true"></i>
+				Notificações
+			</div> <!--  .card-header -->
+
+			<div class="card-body">
+				<notification-component></notification-component>
+			</div> <!--  .card-body -->
+
+		</div> <!--  .card -->
+
 	</div> <!-- .c-sidebar-fixed -->
 
 </div> <!-- .c-sidebar -->
