--- a/source/app/components/home/home.html
+++ b/source/app/components/home/home.html
@@ -1,4 +1,4 @@
-<div class="container d-flex justify-content-center c-home">
+<div class="container d-flex justify-content-around c-home">
 
 	<div class="c-home-view" ui-view="homeView"></div><!--  ui-view -->
 
