--- a/source/app/components/menu/menu.html
+++ b/source/app/components/menu/menu.html
@@ -17,7 +17,7 @@
 		</a>
 	</li>
 	<li class="nav-item active ml-3">
-		<a class="nav-link" href="#">
+		<a class="nav-link" ui-sref="home.notification">
 			<i class="fa fa-lg fa-heart-o" aria-hidden="true"></i>
 		</a>
 	</li>
