Add new features, and create user

--- a/source/app/components/menu/menu.html
+++ b/source/app/components/menu/menu.html
@@ -16,7 +16,7 @@
 			<i class="fa fa-lg fa-plus-circle" aria-hidden="true"></i>
 		</a>
 	</li>
-	<li class="nav-item active ml-3">
+	<li class="nav-item c-menu-notification active ml-3">
 		<a class="nav-link" ui-sref="home.notification">
 			<i class="fa fa-lg fa-heart-o" aria-hidden="true"></i>
 		</a>
