--- a/source/app/components/user/user-create/user-create.html
+++ b/source/app/components/user/user-create/user-create.html
@@ -4,7 +4,7 @@
 
 		<user-form-component 
 			title="Crie Agora Sua Conta"
-			submit-function="$ctrl.updateUserData();"
+			submit-function="$ctrl.addNewUser($event);"
 			button-value="Criar">
 		</user-form-component>
 
