--- a/source/app/components/auth/auth.html
+++ b/source/app/components/auth/auth.html
@@ -7,16 +7,16 @@
 		</div> <!--  .card-header -->
 		
 		<div class="card-body">
-			<form name="login" ng-submit="$ctrl.login();" novalidate>
+			<form name="login" ng-submit="$ctrl.login($ctrl.user);" novalidate>
 
 			    <input-text 
-			    	label="Seu Usuário" 
-			    	required-warning="Digite seu usuário" 
-			    	ng-model="$ctrl.user.name">
+			    	label="Email" 
+			    	required-warning="Digite seu email" 
+			    	ng-model="$ctrl.user.email">
 			    </input-text>
 
 			    <input-password 
-			    	label="Sua Senha" 
+			    	label="Senha" 
 			    	required-warning="Ops, cadê sua senha!?" 
 			    	ng-model="$ctrl.user.password"
 			    	is-required="true">
