--- a/source/app/components/feed/feed.html
+++ b/source/app/components/feed/feed.html
@@ -1,13 +1,13 @@
 <div class="c-feed card bg-light mb-3" ng-repeat="post in $ctrl.posts track by $index">
 
 	<div class="card-header d-flex align-items-center p-2">
-		<img class="c-feed-img-profile card-img rounded-circle mr-3" ng-src="{{post.user_image}}">
-		{{post.user_name}}
+		<img class="c-feed-img-profile card-img rounded-circle mr-3" ng-src="{{post.user.avatar}}">
+		{{post.user.name}}
 	</div> <!--  .card-header -->
 	
-	<img class="card-img rounded-0" ng-src="{{post.image}}">
+	<img class="card-img rounded-0" ng-src="{{post.picture}}">
 	
-	<div class="card-body p-2">
+	<div class="card-body p-3">
 		<p class="card-text c-feed-img-text m-0" ng-bind="post.description"></p>
 	</div> <!-- .card-body -->
 
@@ -19,7 +19,7 @@
 		</div> <!-- .card-button -->
 
 		<p class="card-text">
-			<small class="text-muted" ng-bind="post.created_at"></small>
+			<small class="text-muted" ng-bind="post.created_at | date:fullDate"></small>
 		</p> <!-- .card-text -->
 
 	</div> <!--  .card-footer -->
