--- a/source/app/components/menu/menu.html
+++ b/source/app/components/menu/menu.html
@@ -6,7 +6,7 @@
 	</li>
 
 	<li class="nav-item active ml-3">
-		<a class="nav-link" ui-sref="home.profile">
+		<a class="nav-link" ui-sref="home.profile({id: null})">
 			<i class="fa fa-lg fa-user" aria-hidden="true"></i>
 		</a>
 	</li>
