--- a/source/app/components/profile/profile.css
+++ b/source/app/components/profile/profile.css
@@ -20,6 +20,15 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	flex: 1 auto;
+}
+
+.c-profile-header-content-item {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	margin: 0 0 10px 0;
 }
 
 .c-profile-header-content-list-item {
@@ -57,6 +66,11 @@
 
 	.c-profile-content {
 		grid-template-columns: repeat(2, 1fr);
+	}
+
+	.c-profile-header-content-item {
+		flex-direction: row;
+		margin: 0;
 	}
 
 }
