Add Upload Images

--- a/source/app/components/feed/feed.html
+++ b/source/app/components/feed/feed.html
@@ -31,3 +31,7 @@
 	</div> <!--  .card-footer -->
 
 </div> <!-- .card -->
+
+<div class="alert alert-light d-flex justify-content-center align-items-center flex-column" ng-show="$ctrl.posts.length == 0">
+	<i class="fa fa-birthday-cake fa-3x p-2" aria-hidden="true"></i> Bem Vindo ao Duckgram!
+</div>
