--- a/source/app/components/user/user-create/user-create.html
+++ b/source/app/components/user/user-create/user-create.html
@@ -2,11 +2,54 @@
 	
 	<div class="c-user-create-box">
 
-		<user-form-component 
-			title="Crie Agora Sua Conta"
-			submit-function="$ctrl.addNewUser($event);"
-			button-value="Criar">
-		</user-form-component>
+		<div class="card w-100">
+
+			<div class="card-header">
+				<i class="fa fa-user pr-2" aria-hidden="true"></i>
+				Crie seu usuário :)
+			</div> <!-- .card-header -->
+			
+			<div class="card-body">
+				<form name="userForm" ng-submit="$ctrl.addNewUser($ctrl.data);" novalidate>
+
+				    <input-text 
+				    	label="Nome Completo" 
+				    	required-warning="Digite seu Nome Completo!" 
+				    	ng-model="$ctrl.data.name">
+				    </input-text>
+
+				    <input-text 
+				    	label="Email" 
+				    	required-warning="Digite seu email!" 
+				    	ng-model="$ctrl.data.email">
+				    </input-text>
+
+				    <input-password 
+				    	label="Sua Senha" 
+				    	required-warning="Ops, cadê sua senha!?" 
+				    	ng-model="$ctrl.data.password"
+				    	is-required="true">
+				    </input-password>
+
+					<input-upload
+						label="Foto de Perfil"
+						input-text="Clique"
+						required-warning="Você precisa de uma Imagem :)" 
+						ng-model="$ctrl.data.avatar"
+						is-required="true">
+					</input-upload>
+
+				    <button 
+				    	type="submit" 
+				    	class="btn btn-block btn-primary" 
+				    	ng-disabled="userForm.$invalid">
+				    	Cadastrar
+				    </button>
+
+				</form>
+			</div> <!-- .card-body -->
+
+		</div> <!-- .c-user-form-box -->
 
 	</div> <!-- .c-user-create-box -->
 
