--- a/source/app/components/notification/notification.html
+++ b/source/app/components/notification/notification.html
@@ -1,6 +1,6 @@
 <ul class="c-notification list-group list-group-flush">
 
-  <li class="list-group-item d-flex flex-column" ng-repeat="item in $ctrl.notifications">
+	<li class="list-group-item d-flex flex-column" ng-repeat="item in $ctrl.notifications">
 		<small class="font-weight-bold d-flex">
 			<a ui-sref="home.profile({id: item.user_id})">
 				{{item.user.name}}
@@ -12,6 +12,13 @@
 				Curtiu - {{item.post.description}}
 			</a>
 		</small>
-  </li>
+	</li>
+
+	<li ng-show="$ctrl.notifications.length == 0">
+		<small class="d-block text-muted text-center">
+			<i class="fa fa-smile-o" aria-hidden="true"></i>
+			Sem notificações.
+		</small>
+	</li>
 
 </ul>
