--- a/source/app/components/post/post.html
+++ b/source/app/components/post/post.html
@@ -24,7 +24,7 @@
 		    	input-text="Clique"
 		    	is-drop-active="true"
 		    	required-warning="Você precisa de uma Imagem :)" 
-		    	ng-model="$ctrl.post.avatar"
+		    	ng-model="$ctrl.post.picture"
 		    	is-required="true">
 		    </input-upload>
 
