Add new Features

--- a/source/app/components/auth/auth.html
+++ b/source/app/components/auth/auth.html
@@ -1,4 +1,4 @@
-<div class="c-login d-flex justify-content-center align-items-center">
+<div class="c-login d-flex justify-content-center align-items-start">
 	
 	<div class="card c-login-box">
 
