--- a/source/app/components/menu/menu.html
+++ b/source/app/components/menu/menu.html
@@ -26,4 +26,9 @@
 			<i class="fa fa-lg fa-cog" aria-hidden="true"></i>
 		</a>
 	</li>
+	<li class="nav-item active ml-3">
+		<a class="nav-link" href="" ng-click="$ctrl.logout();">
+			<i class="fa fa-lg fa-sign-out" aria-hidden="true"></i>
+		</a>
+	</li>
 </ul>
