--- a/source/app/components/user/user-personal-data/user-personal-data.html
+++ b/source/app/components/user/user-personal-data/user-personal-data.html
@@ -43,7 +43,8 @@
 
 				    <div class="c-user-personal-image" 
 				    	ng-switch-default>
-				    	<img class="c-user-personal-image-item" ng-src="{{$ctrl.user.avatar}}" />
+				    	<img class="c-user-personal-image-item rounded-circle" 
+				    		ng-src="{{$ctrl.user.avatar}}" />
 				    	<button type="button" ng-click="$ctrl.removeImage()" class="btn btn-outline-danger btn-sm mt-2">Deletar Imagem</button>
 				    </div> <!--  .c-user-personal-image -->
 
