--- a/source/app/components/auth/auth.css
+++ b/source/app/components/auth/auth.css
@@ -1,8 +1,9 @@
 .c-login {
-	width: 100vw;
-	height: 100vh;
-	background: url(/app/assets/images/619157d5eede21ebfac456.jpg) no-repeat center center;
 	background-size: cover;
+	background: url(/app/assets/images/619157d5eede21ebfac456.jpg) no-repeat center center;
+	height: 100%;
+	min-height: 100vh;
+	padding: 70px 0 0 0;
 }
 
 .c-login-box {
