--- a/source/app/components/user/user-create/user-create.css
+++ b/source/app/components/user/user-create/user-create.css
@@ -1,8 +1,9 @@
 .c-user-create {
-	background: url(/app/assets/images/57c533c850025e10be0c68.jpg) no-repeat center center;
 	background-size: cover;
-	height: 100vh;
-	width: 100vw;
+	background: url(/app/assets/images/57c533c850025e10be0c68.jpg) no-repeat center center;
+	height: 100%;
+	min-height: 100vh;
+	padding: 70px 0 0 0;
 }
 
 .c-user-create-box {
